<resources>
    <string name="app_name">My Finance</string>

    <!--FragmentMainPage-->
    <string name="fragment_main_page_title">Текущее положение дел</string>
    <string name="fragment_main_page_income">Поступления <font fgcolor="#008000">%s</font>Р</string>
    <string name="fragment_main_page_outcome">Расходы <font fgcolor="#ff0000">%s</font>Р</string>
    <string name="fragment_main_page_balance">Текущий баланс \n %s Р</string>
    <string name="fragment_main_page_balance_transfer">Осталось с прошлого месяца %s</string>
</resources>